Bug 259179 - After changing the sort order in Ledger view, can't do another change.
Summary: After changing the sort order in Ledger view, can't do another change.
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-08 01:11 UTC by allan
Modified: 2010-12-10 10:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2010-12-08 01:11:05 UTC
Version:           SVN trunk (using KDE 4.4.4) 
OS:                Linux

After changing the sort order in Ledger view, when attempting to make a further change, the centre arrows to move items to or from the 'active' side are disabled.  The left hand items can be selected, but the arrows don't enable.

Clicking a right hand side item then a left hand item re-enables the arrow to add a new parameter.


Reproducible: Didn't try

Steps to Reproduce:
Bring up the sort order dialog.  Select an item from the right, and select to remove it.  Click OK.  Open the dialog again and attempt to reverse the move.  The arrow to achieve the move is disabled although the left parameters may be selected.  Selecting a right side item then a left side one enables the arrow.

Actual Results:  
Can't perform the expected procedure without introducing an otherwise unnecessary step.

Expected Results:  
After removing an item from the right, it should be possible to select that item, or any other on the left, and be able to click the right arrow to make the move.
Comment 1 Thomas Baumgart 2010-12-10 10:38:12 UTC
SVN commit 1205166 by tbaumgart:

Fix sort order option dialog's focus handling

BUG: 259179

 M  +27 -5     transactionsortoptionimpl.cpp  
 M  +1 -0      transactionsortoptionimpl.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205166
Comment 2 Thomas Baumgart 2010-12-10 10:39:47 UTC
SVN commit 1205168 by tbaumgart:

Fix sort order option dialog's focus handling

Backported to stable branch

BUG: 259179

 M  +27 -5     transactionsortoptionimpl.cpp  
 M  +1 -0      transactionsortoptionimpl.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205168