Fix sort order option dialog's focus handling

Backported to stable branch

BUG: 259179

svn path=/branches/kmymoney/4.5/; revision=1205168